--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "rehype-stringify": "^9.0.3",
     "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.2",
+    "remark-rehype": "^10.1.0",
     "remark-smartypants": "^2.0.0",
     "remark-unwrap-images": "^3.0.1",
     "tailwindcss": "^3.4.1",
