--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@eleganthq/elegant-cms": "^0.0.6",
     "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.3",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.15.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-popover": "^1.0.7",
@@ -71,6 +72,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
+    "sharp": "^0.33.5",
     "tiptap-markdown": "^0.8.9",
     "url-slug": "^4.0.1",
     "uuid": "^9.0.1",
