--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "schema": "db/schema.prisma"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.2",
     "@aws-sdk/client-s3": "^3.620.0",
     "@brandonowens/elegant-ui": "^1.3.12",
     "@eleganthq/elegant-cms": "^0.0.6",
     "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.15.0",
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-popover": "^1.0.7",
     "@tippyjs/react": "^4.2.6",
@@ -61,7 +62,7 @@
     "lucide-react": "^0.303.0",
     "moment": "^2.30.1",
     "next": "^14.2.4",
-    "next-auth": "^5.0.0-beta.19",
+    "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
     "npm": "^10.8.2",
     "pluralize": "^8.0.0",
@@ -105,7 +106,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
-    "prisma": "^5.15.0",
+    "prisma": "^5.19.1",
     "react-test-renderer": "^18.3.1",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-parse": "^8.0.2",
