--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "schema": "db/schema.prisma"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.2",
     "@aws-sdk/client-s3": "^3.620.0",
     "@brandonowens/elegant-ui": "^1.3.12",
     "@eleganthq/elegant-cms": "^0.0.6",
