--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-hot-toast": "^2.4.1",
     "sharp": "^0.33.5",
     "tiptap-markdown": "^0.8.9",
+    "ts-node": "^10.9.2",
     "url-slug": "^4.0.1",
     "uuid": "^9.0.1",
     "zod": "^3.23.8",
