--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
@@ -62,6 +63,7 @@
     "moment": "^2.30.1",
     "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.20",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "npm": "^10.8.2",
     "pluralize": "^8.0.0",
