--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.3",
     "@prisma/client": "^5.19.1",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tippyjs/react": "^4.2.6",
     "@tiptap/core": "2.1.10",
     "@tiptap/extension-code-block": "2.2.4",
@@ -56,6 +59,7 @@
     "@tiptap/suggestion": "2.1.10",
     "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jest-mock-extended": "^3.0.7",
     "lowlight": "^2.9.0",
@@ -75,6 +79,8 @@
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
     "sharp": "^0.33.5",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "tiptap-markdown": "^0.8.9",
     "ts-node": "^10.9.2",
     "url-slug": "^4.0.1",
