--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@eleganthq/elegant-cms": "^0.0.6",
     "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.3",
+    "@next/third-parties": "^14.2.10",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -57,10 +58,12 @@
     "@tiptap/react": "2.1.10",
     "@tiptap/starter-kit": "2.1.10",
     "@tiptap/suggestion": "2.1.10",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "feed": "^4.2.2",
     "jest-mock-extended": "^3.0.7",
     "lowlight": "^2.9.0",
     "lucide-react": "^0.303.0",
